--- a/src/features/landing/components/SectoresSection.module.css
+++ b/src/features/landing/components/SectoresSection.module.css
@@ -43,7 +43,7 @@
 }
 
 .header {
-  text-align: center;
+  text-align: left;
   margin-bottom: 72px;
 }
 
